# vidtransgeoref

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
dev_notebooks/: check_exiftool_usage.ipynb
docs/: api.md  index.md
example_data/example_input/: 2025-03-01_143053_BodoVidTransTest.csv  2025-03-01_143053_BodoVidTransTest.gpx  2025-03-01_143053_BodoVidTransTest.kmz
example_data/example_output/: geotagged_images.gpkg
example_data/scripts/: compress_example_video.sh
example_usage/: process_example_data.ipynb  process_example_data.py
notebooks/: test_exiftool_geotagging.ipynb
tests/: test_vidtransgeoref.py
vidtransgeoref/: vidtransgeoref.py
vidtransgeotag/: __init__.py  vidtransgeotag.py
