[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidtransgeotag"
version = "0.1.0"
dependencies = [
  "ffmpeg-python",
  "pyexiftool",
  "python-dateutil",
  "tqdm",
]
requires-python = ">=3.10"
authors = [
  {name = "Martin H. Skjelvareid"},
]
maintainers = [
  {name = "Martin H. Skjelvareid"}
]
description = "Tools for creating geotagged ground truth images by merging video and geolocation data streams."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["video", "transect", "geotagging", "ground truth"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "pytest",
  "ruff",
  "rich",
  "numpydoc-linter",
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material"
]

[project.urls]
Repository = "https://github.com/mh-skjelvareid/vidtransgeotag"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
